--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3",
     "validator": "^10.11.0"
   },
   "scripts": {
